--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -42,4 +42,54 @@
     <string name="mission_title_drink_at_least_2_liters_a_day">Master Hidrasi</string>
     <string name="mission_description_drink_250ml_in_a_day">Minum 250 ml dalam sehari</string>
     <string name="mission_close_sheet">Tutup</string>
+    <string name="statistic_type_daily">Harian</string>
+    <string name="statistic_type_weekly">Mingguan</string>
+    <string name="statistic_type_monthly">Bulanan</string>
+    <string name="statistic_type_yearly">Tahunan</string>
+    <string name="point_card_n_point">%1$s Poin</string>
+    <string name="point_card_exchange_point">Tukarkan poinmu dengan hadiah menarik</string>
+    <string name="onboarding_page_0_title">Lacak asupan air harian Anda bersama kami</string>
+    <string name="onboarding_page_0_description">Capai tujuan hidrasi Anda dengan satu ketukan sederhana!</string>
+    <string name="onboarding_page_1_title">Pengingat Cerdas yang Disesuaikan untuk Anda</string>
+    <string name="onboarding_page_1_description">Cepat dan mudah untuk menetapkan tujuan hidrasi Anda dan kemudian melacak kemajuan asupan air harian Anda.</string>
+    <string name="onboarding_page_2_title">Mudah Digunakan – Minum, Ketuk, Ulangi</string>
+    <string name="onboarding_page_2_description">Tetap terhidrasi setiap hari mudah dilakukan dengan Drops Water Tracker.</string>
+    <string name="onboarding_next">Selanjutnya</string>
+    <string name="onboarding_get_started">Mulai</string>
+    <string name="login_login">Masuk</string>
+    <string name="login_welcome">Sudah siap jadi lebih sehat hari ini?</string>
+    <string name="login_email">Email</string>
+    <string name="login_password">Kata sandi</string>
+    <string name="login_remember_me">Ingat saya</string>
+    <string name="login_forgot_password">Lupa kata sandi</string>
+    <string name="login_dont_have_account">Tidak punya akun?</string>
+    <string name="login_signup">Daftar</string>
+    <string name="login_login_with">Atau lanjutkan dengan</string>
+    <string name="statistic_avg_volume">Rata-rata volume</string>
+    <string name="statistic_avg_completion">Rata-rata penyelesaian</string>
+    <string name="statistic_drink_frequency">Frekuensi minum</string>
+    <string name="statistic_avg_volume_value">%1$s %2$s / hari</string>
+    <string name="statistic_drink_frequency_value">%1$s kali / hari</string>
+    <string name="statistic_highest_daily_record">Rekor tertinggi dalam satu hari</string>
+    <string name="statistic_highest_weekly_record">Rekor tertinggi dalam satu minggu</string>
+    <string name="statistic_highest_monthly_record">Rekor tertinggi dalam satu bulan</string>
+    <string name="statistic_highest_yearly_record">Rekor tertinggi dalam satu tahun</string>
+    <string name="setting_item_reminder">Pengingat</string>
+    <string name="setting_item_profile">Profil</string>
+    <string name="reminder_reminder">Pengingat</string>
+    <string name="home_remaining_water">Air tersisa</string>
+    <string name="statistic_example">Contoh</string>
+    <string name="statistic_premium_text">Dapatkan lebih banyak insight hidrasi untuk memahami kebiasaan minum Anda dengan lebih baik >></string>
+    <string name="statistic_compare_hydration">Bandingkan Hidrasi</string>
+    <string name="statistic_today">Hari ini</string>
+    <string name="statistic_this_week">Minggu ini</string>
+    <string name="statistic_this_month">Bulan ini</string>
+    <string name="statistic_this_year">Tahun ini</string>
+    <string name="statistic_vs">vs</string>
+    <string name="statistic_volume">Volume</string>
+    <string name="statistic_completion_rate">Persentase Target Tercapai</string>
+    <string name="marketplace_bentala_rewards">Hadiah Bentala</string>
+    <string name="accessory_item_n_point">Poin</string>
+    <string name="marketplace_get_point_summary">Dapatkan poin Bentala dari setiap transaksi</string>
+    <string name="statistic_n_times">%1$s kali</string>
 </resources>
