--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,55 @@
     <string name="mission_title_drink_at_least_2_liters_a_day">Hydration Master</string>
     <string name="mission_description_drink_250ml_in_a_day">Drink 250 ml a day</string>
     <string name="mission_close_sheet">Close</string>
+    <string name="statistic_type_daily">Daily</string>
+    <string name="statistic_type_weekly">Weekly</string>
+    <string name="statistic_type_monthly">Monthly</string>
+    <string name="statistic_type_yearly">Yearly</string>
+    <string name="point_card_n_point">%1$s Point</string>
+    <string name="point_card_exchange_point">Exchange your points for attractive prizes</string>
+    <string name="onboarding_page_0_title">Track your daily water intake with us</string>
+    <string name="onboarding_page_0_description">Achieve your hydration goals with a simple tap!</string>
+    <string name="onboarding_page_1_title">Smart Reminders Tailored to You</string>
+    <string name="onboarding_page_1_description">Quick and easy to set your hydration goal and then track your daily water intake progress.</string>
+    <string name="onboarding_page_2_title">Easy to Use – Drink, Tap, Repeat</string>
+    <string name="onboarding_page_2_description">Staying hydrated every day is easy with Drops Water Tracker.</string>
+    <string name="onboarding_next">Next</string>
+    <string name="onboarding_get_started">Get Started</string>
+    <string name="login_login">Login</string>
+    <string name="login_welcome">Ready to be healthier today?</string>
+    <string name="login_email">Email</string>
+    <string name="login_password">Password</string>
+    <string name="login_remember_me">Remember me</string>
+    <string name="login_forgot_password">Forgot password</string>
+    <string name="login_dont_have_account">Don\'t have an account?</string>
+    <string name="login_signup">Sign Up</string>
+    <string name="login_login_with">Or continue with</string>
+    <string name="google" translatable="false">Google</string>
+    <string name="statistic_avg_volume">Average volume</string>
+    <string name="statistic_avg_completion">Average completion</string>
+    <string name="statistic_drink_frequency">Drink frequency</string>
+    <string name="statistic_avg_volume_value">%1$s %2$s / day</string>
+    <string name="statistic_drink_frequency_value">%1$s times / day</string>
+    <string name="statistic_highest_daily_record">Highest single-day record</string>
+    <string name="statistic_highest_weekly_record">Highest weekly record</string>
+    <string name="statistic_highest_monthly_record">Highest monthly record</string>
+    <string name="statistic_highest_yearly_record">Highest yearly record</string>
+    <string name="setting_item_reminder">Reminder</string>
+    <string name="setting_item_profile">Profile</string>
+    <string name="reminder_reminder">Reminder</string>
+    <string name="home_remaining_water">Remaining water</string>
+    <string name="statistic_example">Example</string>
+    <string name="statistic_premium_text">Unlock more hydration insights to understand your drinking habits better >></string>
+    <string name="statistic_compare_hydration">Compare Hydration</string>
+    <string name="statistic_today">Today</string>
+    <string name="statistic_this_week">This week</string>
+    <string name="statistic_this_month">This month</string>
+    <string name="statistic_this_year">This year</string>
+    <string name="statistic_vs">vs</string>
+    <string name="statistic_volume">Volume</string>
+    <string name="statistic_completion_rate">Completion rate</string>
+    <string name="marketplace_bentala_rewards">Bentala Rewards</string>
+    <string name="accessory_item_n_point">%1$s Points</string>
+    <string name="marketplace_get_point_summary">Earn Bentala points from every transaction</string>
+    <string name="statistic_n_times">%1$s times</string>
 </resources>
